fix z-index of Provide Feedback button

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -101,3 +101,7 @@ body.dark {
   --shadow: 0px 2px 8px rgba(20, 14, 1, 0.18);
   --shadow-hover: 2px 2px 12px rgba(68, 64, 64, 0.14);
 }
+
+#atlwdg-trigger {
+  z-index: 5;
+}
